--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ _autosave-*
 *-save.kicad_pcb
 fp-info-cache
 
+sym-lib-table
+
 # Netlist files (exported from Eeschema)
 *.net
 
@@ -33,3 +35,7 @@ fp-info-cache
 fp-lib-table
 
 jlcpcb/
+
+Gerbers/
+
+macro.step
