--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "random-keyboard-parts.pretty"]
 	path = pcb/random-keyboard-parts.pretty
 	url = git@github.com:ai03-2725/random-keyboard-parts.pretty.git
-[submodule "MX_Alps_Hybrid"]
-	path = pcb/MX_Alps_Hybrid
-	url = https://github.com/ai03-2725/MX_Alps_Hybrid
 [submodule "Type-C.pretty"]
 	path = pcb/Type-C.pretty
 	url = git@github.com:ai03-2725/Type-C.pretty.git
+[submodule "pcb/MX_Alps_Hybrid"]
+	path = pcb/MX_Alps_Hybrid
+	url = https://github.com/ai03-2725/MX_Alps_Hybrid
