--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -8,17 +8,22 @@ edition = "2021"
 [dependencies]
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
+cortex-m-rtic = "1.1.4"
 embedded-hal = { version = "0.2.5", features = ["unproven"] }
+fugit = "0.3.6"
 
+# HAL
+rp2040-hal = { version="0.8", features=["rt", "rtic-monotonic", "critical-section-impl"] }
+rp2040-boot2 = "0.2"
+
+# Logging
 defmt = "0.3"
 defmt-rtt = "0.4"
 panic-probe = { version = "0.3", features = ["print-defmt"] }
 
-rp2040-hal = { version="0.6", features=["rt"] }
-rp2040-boot2 = "0.2"
+# USB support
 usb-device = "0.2.9"
 usbd-hid = "0.6.1"
-embedded-time = "0.12.1"
 
 # cargo build/run
 [profile.dev]
