--- a/firmware/Cargo.toml
+++ b/firmware/Cargo.toml
@@ -6,17 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+# ARM and embedded essentials
 cortex-m = "0.7"
 cortex-m-rt = "0.7.3"
 cortex-m-rtic = "1.1.4"
 embedded-hal = { version = "0.2.5", features = ["unproven"] }
-fugit = "0.3.6"
-ws2812-pio = "0.6.0"
-smart-leds = "0.3.0"
+fugit = "0.3.6" # For time conversion
 
 # HAL
 rp2040-hal = { version="0.8", features=["rt", "rtic-monotonic", "critical-section-impl"] }
 rp2040-boot2 = "0.2"
+
+# LEDs
+cichlid = { version = "0.2.1", features = ["no-std"] }
+ws2812-pio = "0.6.0"
+smart-leds = "0.3.0"
 
 # Logging
 defmt = "0.3"
@@ -26,7 +31,7 @@ panic-probe = { version = "0.3", features = ["print-defmt"] }
 # USB support
 usb-device = {version = "0.2.9", features = ["defmt"] }
 usbd-human-interface-device = "0.3.2"
-frunk = { version = "0.4", default-features = false }
+frunk = { version = "0.4", default-features = false } # Used by usbd-human-interface-device for lists
 
 # cargo build/run
 [profile.dev]
